--- a/latex/sections/cf_principe.tex
+++ b/latex/sections/cf_principe.tex
@@ -23,7 +23,7 @@ W_{o,A}(t_1,t_2) = (t_2-t_1) \frac{S_A}{\sum_i S_i}
 \label{eq:perfect_fairness}
 \end{equation}
 
-Hierbei ist $S_A$ der proportionale Anteil des Klienten $A$, $S_i$ die Anteile aller aktiven Klienten und $W_{o,A}$ stellt als Ergebnis eine optimale proportionale Menge des Klienten in der Zeit zwischen $t1$ und $t2$ dar.
+Hierbei ist $S_A$ der proportionale Anteil des Klienten $A$, $S_i$ die Anteile aller aktiven Klienten und $W_{o,A}$ stellt als Ergebnis eine optimale proportionale Menge des Klienten in der Zeit zwischen $t_1$ und $t_2$ dar.
 
 Im idealen System, wenn alle Klienten ihre Zuweisung gleichzeitig erhalten und ihren geforderten Ressourcenanspruch simultan verbrauchen könnten, wäre es möglich die obige Gleichung für alle Klienten entsprechend dauerhaft aufrecht zu erhalten.
 Damit wäre eine \textit{completely-fair} Verteilung gegeben. Allerdings ist dies in der Praxis nicht möglich, da immer nur ein Klient für die Ressource die Zuteilung bekommen kann.
