meine änderungen + literatur

--- a/latex/literatur.bib
+++ b/latex/literatur.bib
@@ -27,7 +27,8 @@
 	author = {Avinesh Kumar},
 	title = {Multiprocessing with the Completely Fair Scheduler},
 	journal = {IBM Developer Works},
-	year = {2009},
+	year = {2008},
+	month = {01},
 }
 
 @book{tcormen,
@@ -35,6 +36,7 @@
 	title = {Algorithmen - Eine Einf{\"u}hrung},
 	publisher = {Oldenbourg Wissenschaftsverlag GmbH},
 	year = {2013},
+	month = {10},
 	isbn = {978-3-486-74861-1},
 }
 
@@ -45,12 +47,14 @@
 	publisher = {Springer},
 	author = {Pinedo, Michael},
 	year = {2012},
+	month = {01},
 }
 
 @book{aagnetis,
 	author = {Agnetis, Alessandro},
 	title = {Multiagent Scheduling},
 	year = {2014},
+	month = {01},
 	publisher={Springer},
 	location={Berlin/Heidelberg},
 }
@@ -61,12 +65,14 @@
 	year = {2009},
 	publisher={Wiley},
 	location={USA},
+	month = {07},
 }
 
 @book{rlove,
  author = {Love, Robert},
  title = {Linux Kernel Development},
  year = {2010},
+ month = {06},
  isbn = {0672329468, 9780672329463},
  edition = {3rd},
  publisher = {Addison-Wesley Professional},
@@ -74,9 +80,10 @@
 
 @article{usenix,
 	author = {Jason Nieh and Chris Vaill and Hua Zhong},
-	title = {Virtual-Time Round-Robin: An O(1) Proportional Share Scheduler},
-	journal = {USENIX Association Proceedings of the 2001 USENIX Annual Technical Conference},
+	title = {Virtual-Time Round-Robin: An {O}(1) Proportional Share Scheduler},
+	journal = {2001 USENIX Annual Technical Conference},
 	year = {2001},
+	month = {06},
 }
 
 @article{paperfairness,
@@ -84,10 +91,8 @@
 	title = {Towards Achieving Fairness in the Linux Scheduler},
 	journal = {ACM SIGOPS Operating Systems Review - Research and developments in the Linux kernel},
 	year = {2008},
-	volume = {42},
-	issue = {5},
-	month = {July},
-	pages = {34-43},
+	month = {07},
+	%pages = {34-43},
 }
 
 @article{cpabla,
@@ -95,7 +100,7 @@
 	title = {Completely Fair Scheduler},
 	journal = {Linux Journal },
 	year = {2009},
-	month = {August},
+	month = {08},
 }
 
 @thesis{nikita,
@@ -103,15 +108,15 @@
 	title = {A complete guide to Linux process scheduling},
 	school = {University of Tampere},
 	year = {2015},
-	month = {2},
+	month = {02},
 }
 
 @article{papercomparison,
 	author = {C.S. Wong, I.K.T. Tan, R.D. Kumari, J.W. Lam},
-	title = {Fairness and Interactive Performance of O(1) and CFS Linux Kernel Schedulers},
-	journal = {2008 International Symposium on Information Technology },
+	title = {Fairness and Interactive Performance of {O}(1) and CFS Linux Kernel Schedulers},
+	journal = {IEEE International Symposium on Information Technology },
 	year = {2008},
-	month = {September}
+	month = {11}
 }
 
 
