--- a/latex/sections/comp_to_O1.tex
+++ b/latex/sections/comp_to_O1.tex
@@ -22,8 +22,9 @@ Für den Fairness-Test wurde gemessen, wie genau der Scheduler die CPU-Bandbreit
  	\label{fig:fair_meas_o1}
 \end{figure}
 
-In den Abbildungen \ref{fig:fair_meas_cfs}\&\ref{fig:fair_meas_o1} sind die Ergebnisse bei $N$=32 zu sehen. \\
-Dabei ist zu erkennen, dass die Standardabweichung der verbrauchten Zeit pro Kind beim O(1)-Scheduler höher ist als die des CFS. Die weite Streuung der Daten im Diagramm \ref{fig:fair_meas_o1} zeigt, dass manche Kinder schneller fertig sind als andere. Dahingegen sind die Daten im Diagramm zum CFS knapper und konzentrierter um den Durchschnittswert angeordnet. \\
+In den Abbildungen \ref{fig:fair_meas_cfs}\&\ref{fig:fair_meas_o1} sind die Ergebnisse bei $N$=32 zu sehen. Auf der X-Achse befinden sich die Zeitpunkte in Sekunden, an denen ein oder mehrere Kinder mit der Integralrechnung fertig waren. Korrespondierend dazu zeigt die Y-Achse, wieviele Kinder zum Zeitpunkt X fertig waren. Beispielsweise zeigt Abbildung \ref{fig:fair_meas_cfs}, dass nach ca. 92 Sekunden 10 Kinder mit der Berechnung fertig waren. \\
+Zu erkennen ist, dass die Standardabweichung der verbrauchten Zeit pro Kind beim O(1)-Scheduler höher ist als die des CFS. Die weite Streuung der Daten im Diagramm \ref{fig:fair_meas_o1} zeigt, dass manche Kinder schneller fertig sind als andere. Die Kinder werden zu stark unterschiedlichen Zeitpunkten mit der Berechnung fertig.\\
+Dahingegen sind die Daten im Diagramm zum CFS knapper und konzentrierter um den Durchschnittswert angeordnet. CFS hat die CPU zu gleicheren Anteilen den Kindern zugeteilt, sodass diese ungefähr nach 92 Sekunden mit der Berechnung fertig waren. \\
 Nach \cite{papercomparison} kann zusammenfassend gesagt werden, dass CFS die zur Verfügung stehende CPU-Zeit auf eine fairere Weise über jede Aufgabe verteilt. Die Autoren nennen als Grün\-de dafür, dass CFS die Zeitquanten sehr granular verteilt und diese in Nanosekunden berechnet werden.
 
 Für die Messung der Interaktivitätslatenz wurde ebenfalls ein Benchmark genutzt, welches Interaktivitätsaufgaben und unterschiedliche Hintergrundaufgaben simuliert. Für die Interaktivitätslatenz wurde die Zeit gemessen, die zwischen dem Anfragen des Prozessors durch die interaktive Aufgabe und dem tatsächlichen Zeitpunkt des Erhalts der CPU liegt. Dies ist dann die Zeit, die der Scheduler benötigt, um die Ressource CPU für die interaktive Aufgabe zu allokieren. Im Test von \cite{papercomparison} wurden drei Tests durchgeführt: In jedem davon war die interaktive Aufgabe das X-Window System eines Linux-Betriebssystems und als Hintergrundaufgaben wurden drei verschiedene Belastungen simuliert. Im ersten Test war ein Abspielen einer Audiodatei mit 5\% CPU-Load, im zweiten das Abspielen eines Videos bei 60 frames/sec mit 40\% CPU-Load und abschließend eine volle Belastung bei 100\% simuliert. Auch hier wurde jeder Test 100 mal wiederholt und die Ergebnisse für die durschnittliche (arithmetisches Mittel) und die Maximallatenz in zwei Diagrammen (Abbildung \ref{fig:avg_latency}\&\ref{fig:max_latency}) dargestellt. 
