--- a/latex/sections/aufbau.tex
+++ b/latex/sections/aufbau.tex
@@ -12,7 +12,7 @@ Das Ziel eines  Completely-Fair-Schedulers{} soll es sein, eine faire Aufteilung
 Im einfachsten Fall, wenn keine Prioritäten unter den Prozessen vergeben werden, ist eine perfekte Aufteilung der Ressource dann gegeben, wenn zu jedem Zeitpunkt jeder Prozess immer eine Zuteilung im Verhältnis $1/n$ erhält, wobei $n$ die Menge aller Prozesse darstellt.
 Bei zwei laufenden Prozessen heißt das, dass beide Prozesse zeitgleich mit jeweils 50 Prozent der Prozessorressource arbeiten. Dies ist in der Praxis allerdings nicht möglich, da jeder Prozessor immer nur eine Aufgabe zu einem Zeitpunkt bearbeiten kann.
 
-Unter Linux und unixartigen Systemen werden daher den beiden Prozessen Zeitscheiben zugeordnet und es findet eine sequentielle Abarbeitung statt. Anschließend werden die Prozesse abwechselnd mit jeweils der maximal zur Ver\-fügung stehenden Prozessorressource entsprechend ihrer Zeitscheibe verarbeitet.
+Unter Linux und unix\-artigen Systemen werden daher den beiden Prozessen Zeitscheiben zugeordnet und es findet eine sequentielle Abarbeitung statt. Anschließend werden die Prozesse abwechselnd mit jeweils der maximal zur Ver\-fügung stehenden Prozessorressource entsprechend ihrer Zeitscheibe verarbeitet.
 
 %Um mit diesem Prinzip eine Annäherung an einen perfekten Multitasking-Prozessor zu erreichen, müsste man die Zuteilung für jeden Prozess in unendlich kleine Zeitscheiben zerlegen und alternierend dem Prozessor zuweisen.
 Je kleiner die Zeitscheiben gewählt werden, desto mehr wird ein nahezu zeitgleiches Abarbeiten der anstehenden Prozesse erreicht.
@@ -58,20 +58,32 @@ Hierbei ist \textit{se$\rightarrow$load.weight} das Gewicht des Prozesses aus de
 \end{table}
 
 
-In dieser Tabelle ist die entsprechende Zuweisung vom \textit{nice}-Wert zum Gewicht dargestellt. 
-
-Dabei sind pro Zeile immer fünf Zuweisungen von \textit{nice}-Werten zu Gewichten zu sehen, welche bei dem \textit{nice}-Wert der ersten Spalte starten und nach rechts immer um eins inkrementiert wird. 
+In dieser Tabelle sind die entsprechenden Zuweisungen vom \textit{nice}-Wert zum Gewicht dargestellt. 
+Dabei sind alle vierzig \textit{nice}-Werte mit entsprechenden Gewichten der Reihe nach absteigend dargestellt.
+Spalte eins und Zeile zwei dienen dabei als Hilfsindex zum Ablesen. Das passende Gewicht zum \textit{nice}-Wert -18, kann z.B. in der Zeile mit \textit{nice}-Wert -20 und der Spalte +2 (Rechnung: -20+2=18) mit einem Wert von 56483 ermittelt werden.
+Die Abstände zwischen den Zahlen sind so gewählt, dass bei einem Auf- bzw. Absteigen eines \textit{nice}-Wertes die CPU-Zuteilungszeit um 10\% erhöht bzw. um 10\% erniedrigt wird. Damit ergibt sich ein annähernder Faktor zwischen den Gewichten von ca. 1,25. Dies kann im Kernel unter \texttt{sched.c} an entsprechender Stelle eingesehen werden. 
 
 Die Variable \textit{cfs\_rq$\rightarrow$load.weight} ist die Summe aller Gewichte der momentan aktiven Prozesse der Warte\-schlan\-ge.
-\textit{period} ist der Zeitschlitz, für welchen eine Bewertung mit Basis auf den idealen Zeitscheiben der aktuellen Prozesse vorgenommen werden soll. Dieser Wert ist nicht konstant einstellbar. Erreicht z.B. die Anzahl der lauf\-fähigen Prozesse eine kritische Grenze, so muss der Wert von \textit{period} erhöht werden. 
-Diese Grenze wird im Kernel mit Hilfe der Variable \textit{nr\_latency} ermittelt. Diese Variable setzt sich aus dem Verhätlnis von \textit{period} und der minmalen Zeitscheibe für einen Prozess zusammen \cite{paperfairness}.
 
-\begin{equation}
-nr\_latency = \frac{sysctl\_sched\_latency}{sysctl\_sched\_min\_granularity}
-\label{eq:nr_latency}
-\end{equation}
+\textit{period} ist ein Abschnitt, für welchen die Prozesse ihren entsprechenden proportionalen Zeitanteil erhalten. Dieser Wert ist einstellbar.
 
-Somit gibt die Variable \textit{nr\_latency} die maximal mögliche Anzahl von Prozessen mit gegebenen Parametern vor. Über\-steigt nun die Anzahl der aktuell lauffähigen Prozesse diesen Wert, so muss der Wert von \textit{period}, bzw. in Formel (\ref{eq:nr_latency}) ensprechend \textit{sysctl\_sched\_latency}, erhöht werden.
+Die maximal gültige Anzahl von Prozessen für diesen Zeitabschnitt kann z.B. mit der Division der aktuellen \textit{period} durch den Wert der kleinst möglichen Zeitscheibe, enthalten im Wert von  \texttt{sysctl\_sched\_min\_granulari\-ty}, ermittelt werden.  
+%Errechnet man z.B. die maximal gültige Anzahl von Prozessen für diesen Zeitabschnitt mit $period %/   und 
+Übersteigt die Anzahl der aktuellen Prozesse diesen Wert, so muss \textit{period} entsprechend angepasst werden.
+
+
+%Erreicht z.B. die Anzahl der lauf\-fähigen Prozesse eine bestimmte Grenze, so muss der Wert von \textit{period} erhöht werden. 
+
+%Die Grenze ergibt sich aus dem aktuellen Abschnitt und des festgelegten Wertes von \textit{sysctl\_sched\_min\_granularity}. 
+
+%Diese Grenze wird im Kernel mit Hilfe der Variable \textit{nr\_latency} ermittelt. Diese Variable setzt sich aus dem Verhätlnis von \textit{period} und der minmalen Zeitscheibe für einen Prozess zusammen \cite{paperfairness}.
+
+%\begin{equation}
+%nr\_latency = \frac{sysctl\_sched\_latency}{sysctl\_sched\_min\_granularity}
+%\label{eq:nr_latency}
+%\end{equation}
+
+%Somit gibt die Variable \textit{nr\_latency} die maximal mögliche Anzahl von Prozessen mit gegebenen Parametern vor. Über\-steigt nun die Anzahl der aktuell lauffähigen Prozesse diesen Wert, so muss der Wert von \textit{period}, bzw. in Formel (\ref{eq:nr_latency}) ensprechend \textit{sysctl\_sched\_latency}, erhöht werden.
 
 Im anschließenden Schritt soll eine faire Auswahl auf den nächsten ausführbaren Prozess getroffen werden. Dies geschieht mit einer weiteren Bewertung der Prozesse im Bezug zu ihrer bereits ausgeführten Zeit. 
 Dazu dient im CFS-Algorithmus die Variable \textit{virtual runtime}. In \cite{mjones} wird die \textit{virtual runtime} definiert als Menge der CPU-Zeit, die einem gewissen Prozess zugeordnet worden ist. Je kleiner der Wert für \textit{virtual runtime} ist, desto höher ist die Dringlichkeit dieser Aufgabe den Prozessor für sich zugewiesen zu bekommen. Ebenso beschreibt \cite{mjones} die Funktionalität von CFS, dass eine gewisse \textit{Sleeper-Fairness} implementiert ist: Aufgaben, die zu einem Zeitpunkt nicht lauffähig sind (z.B. beim Warten auf I/O"--Operationen) erhalten ei\-nen vergleichbaren Anteil am Prozessor, wenn sie diesen benö"-tigen.\\
