--- a/latex/sections/aufbau.tex
+++ b/latex/sections/aufbau.tex
@@ -103,7 +103,16 @@ Mit Hilfe des ersten Terms aus Formel (\ref{eq:vruntime}) wird die aktuelle virt
 
 Mit \textit{vruntime} können nun die Prozesse entsprechend ihrer Laufzeit und ihrem Gewicht bewertet und eine Rangfolge erstellt werden. Dazu wird an dieser Stelle der Rot-Schwarz-Baum [s.Kapitel \ref{s:rb_tree}] verwendet. Die Prozesse werden nach ihrem \textit{virtual runtime}-Wert in den Baum einsortiert. Dabei steht der Prozess mit der kleinsten \textit{virtual runtime} am weitesten links und kann nun durch den Scheduler ohne lange Suchzeiten ermittelt und als nächster auszuführender Prozess ausgewählt werden. 
 
-Stehen zum Beispiel drei lauffähige Prozesse  mit \textit{nice}-Werten von  $0$, $1$ und $2$ und entsprechenden Gewichten von $1024$, $820$ und $655$ in einer Warteschlange für einen Prozessor, dann ergeben sich die idealen Zeitscheiben bei einer Periode von 20ms mit Formel (\ref{eq:slice}) zu $8.2ms$, $6.6ms$ und $5.2ms$. Ermittelt man nun dazu passend die \textit{virtual runtime}-Werte und zwar so, dass jeder Prozess seine Zuteilung für diese Periode vollständig ausgenutzt hätte, so wird ersichtlich, dass alle Prozesse nun den gleichen \textit{virtual runtime}-Wert von ca. $8*10^{-6}$ besitzen. Damit wird eine faire Aufteilung mit Be\-rück\-sichtigung der \textit{Prioritäten} gewährt.
+Stehen zum Beispiel drei lauffähige Prozesse  mit \textit{nice}-Werten von  $0$, $1$ und $2$ und entsprechenden Gewichten von $1024$, $820$ und $655$ in einer Warteschlange für einen Prozessor, dann ergeben sich die idealen Zeitscheiben bei einer Periode von 20ms mit Formel (\ref{eq:slice}) zu $8.2ms$, $6.6ms$ und $5.2ms$.
+Ermittelt man dazu jetzt die passenden \textit{virtual runtime}-Werte mit Formel (\ref{eq:vruntime}) und zwar so, dass jeder Prozess seine Zuteilung für diese Periode vollständig ausgenutzt, so wird ersichtlich, dass alle Prozesse nun den gleichen \textit{virtual runtime}-Wert erreicht haben.
+Bei \textit{nice}-Wert 0 ergäbe es nach Einsetzten des oben berechneten \textit{slice}-Wertes von $8.2ms$ für \textit{delta\_exec} in Formel (\ref{eq:vruntime}), dem ermittelten Gewicht von $1024$ für \textit{se$\rightarrow$load.weight} und $NICE\_\\0\_LOAD$ von 1024 einen Wert von $8,2ms$.
+Für \textit{nice}-Wert 1 wird eine  \textit{virtual runtime} von ebenfalls $8,2ms$ erreicht und für \textit{nice} 2 ein Wert von $7,9ms$. 
+
+Damit wird gezeigt, dass der \textit{virtual runtime}-Wert dazu verwendet werden kann, um eine gerechte Aufteilung entsprechend der \textit{nice}-Werte zu ermöglichen. 
+Sind alle \textit{virtual runtime}-Werte nach Abschluss der Periode gleich, so wird das \textit{completely-fair} Prinzip erreicht.
+%Ermittelt man nun dazu passend die \textit{virtual runtime}-Werte mit Formel (\ref{eq:runtime}) und zwar so, dass jeder Prozess seine Zuteilung für diese Periode vollständig ausgenutzt hätte, so wird ersichtlich, dass alle Prozesse nun den gleichen \textit{virtual runtime}-Wert erreicht haben.
+
+ %von ca. $8*10^{-6}$ besitzen. Damit wird eine faire Aufteilung mit Be\-rück\-sichtigung der \textit{Prioritäten} gewährt.
 
 %Jeder Prozess er\-hält eine Zeitscheibe, welche proportional zum eigenen Gewicht im Verhältnis zu den Gewichten aller Prozesse ist. Die Wahl des nächstes Prozesses fällt immer auf den Prozess, welcher bis zu diesem Zeitpunkt die geringste Zuteilung des Prozessors erhalten hat.
 %Zur Berechnung einer Zeitscheibe, setzt der CFS-Scheduler eine sogenannte „targeted latency“. Diese stellt einen Richtwert für die verfügbare Zeit aller anstehenden Prozesse dar, welcher äquivalent im perfekten Multitasking erreicht würde.
